<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paymode Push Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="settingsHeader">Settings</string>
    <string name="notifGroup">Types of Notification</string>
    <string name="deviceIdText">Device ID</string>
    <string name="copyIdButton">Copy</string>
    <string name="invoiceSwitch">Invoices</string>
    <string name="predictSwitch">Prediction</string>
    <string name="title_activity_main_activity">Main_activity</string>
    <string name="action_settings">Settings</string>
    <string name="header_info">Message Info</string>
    <string name="message_info">Information about message in several lines (up to 10 lines for example)</string>
    <string name="button_ok">Ok</string>
    <string name="button_delete">Delete</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="copy_device_id">Device Id</string>
    <string name="title_activity_settings">Settings</string>
    <string name="copy_to_clipboard">Tap here for copy device id to clipboard</string>
    <string name="copy_dev_id_key">device_id</string>
    <string name="invoice_switch_key">invoice_switch</string>
    <string name="predict_switch_key">predict_switch</string>

</resources>