<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/invoice_switch_key"
        android:id="@+id/invoice_switch"
        android:title="@string/invoiceSwitch"
        android:defaultValue="true"
        android:enabled="true"
        android:switchTextOn="On"
        android:switchTextOff="Off"
        android:textSize="@dimen/switch_text_width"/>

    <SwitchPreference
        android:dependency="@string/invoice_switch_key"
        android:key="@string/predict_switch_key"
        android:id="@+id/predict_switch"
        android:title="@string/predictSwitch"
        android:defaultValue="true"
        android:enabled="true"
        android:switchTextOn="On"
        android:switchTextOff="Off"
        android:textSize="@dimen/switch_text_width"/>

</PreferenceScreen>
