<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_screen"
    android:background="@android:color/darker_gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header_info"
        android:id="@+id/header_info"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/background_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_info"
        android:id="@+id/message_info"
        android:layout_gravity="center_horizontal"
        android:maxLines="10"
        android:minLines="5"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:background="#ffdfdfdf" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#ffdfdfdf"
        android:layout_marginBottom="10dp"
        android:id="@+id/buttons_in_message_info">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:id="@+id/button_ok"
            android:layout_weight="0.3"
            android:background="@android:color/darker_gray"
            android:textColor="#ff464646"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:id="@+id/button_delete"
            android:layout_weight="0.3"
            android:background="@android:color/darker_gray"
            android:textColor="#ff464646"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>
</LinearLayout>